[package]
name = "apas-verus"
version = "0.1.0"
edition = "2024"

[package.metadata.verus]
verify = true

[features]
default = []
# Build only experiments (skip chapter modules)
experiments_only = []

[dependencies]
vstd = "0.0.0-2025-08-12-1837"
derive_more = { version = "1.0", features = ["display"] }
verus_state_machines_macros = "0.0.0-2025-11-23-0053"
rand = "0.10.0"

[lib]
path = "src/lib.rs"

[[test]]
name = "TestInsertionSortStEph"
path = "tests/Chap03/TestInsertionSortStEph.rs"

[[test]]
name = "TestSetStEph"
path = "tests/Chap05/TestSetStEph.rs"

[[test]]
name = "TestRelationStEph"
path = "tests/Chap05/TestRelationStEph.rs"

[[test]]
name = "TestMappingStEph"
path = "tests/Chap05/TestMappingStEph.rs"

[[test]]
name = "TestKleeneStPer"
path = "tests/Chap05/TestKleeneStPer.rs"

[[test]]
name = "TestSetMtEph"
path = "tests/Chap05/TestSetMtEph.rs"

[[test]]
name = "test_total_order"
path = "tests/vstdplus/test_total_order.rs"

[[test]]
name = "test_partial_order"
path = "tests/vstdplus/test_partial_order.rs"

[[test]]
name = "test_feq"
path = "tests/vstdplus/test_feq.rs"

# Orphaned: test_checked_nat_with_checked_view

[[test]]
name = "TestDirGraphStEph"
path = "tests/Chap06/TestDirGraphStEph.rs"

[[test]]
name = "TestDirGraphMtEph"
path = "tests/Chap06/TestDirGraphMtEph.rs"

[[test]]
name = "TestUnDirGraphStEph"
path = "tests/Chap06/TestUnDirGraphStEph.rs"

[[test]]
name = "TestLabDirGraphStEph"
path = "tests/Chap06/TestLabDirGraphStEph.rs"

[[test]]
name = "TestLabUnDirGraphStEph"
path = "tests/Chap06/TestLabUnDirGraphStEph.rs"

[[test]]
name = "TestUnDirGraphMtEph"
path = "tests/Chap06/TestUnDirGraphMtEph.rs"

# TestLabDirGraphMtEph and TestLabUnDirGraphMtEph exist on disk but are stale
# (reference methods no longer in the Mt API). Need rework.

[[test]]
name = "TestWeightedDirGraphStEphU32"
path = "tests/Chap06/TestWeightedDirGraphStEphU32.rs"

[[test]]
name = "TestWeightedDirGraphStEphU8"
path = "tests/Chap06/TestWeightedDirGraphStEphU8.rs"

[[test]]
name = "TestWeightedDirGraphStEphI8"
path = "tests/Chap06/TestWeightedDirGraphStEphI8.rs"

[[test]]
name = "TestWeightedDirGraphStEphI16"
path = "tests/Chap06/TestWeightedDirGraphStEphI16.rs"

[[test]]
name = "TestWeightedDirGraphStEphI32"
path = "tests/Chap06/TestWeightedDirGraphStEphI32.rs"

[[test]]
name = "TestWeightedDirGraphStEphI64"
path = "tests/Chap06/TestWeightedDirGraphStEphI64.rs"

[[test]]
name = "TestWeightedDirGraphStEphI128"
path = "tests/Chap06/TestWeightedDirGraphStEphI128.rs"

[[test]]
name = "TestWeightedDirGraphStEphIsize"
path = "tests/Chap06/TestWeightedDirGraphStEphIsize.rs"

[[test]]
name = "TestWeightedDirGraphStEphU16"
path = "tests/Chap06/TestWeightedDirGraphStEphU16.rs"

[[test]]
name = "TestWeightedDirGraphStEphU64"
path = "tests/Chap06/TestWeightedDirGraphStEphU64.rs"

[[test]]
name = "TestWeightedDirGraphStEphU128"
path = "tests/Chap06/TestWeightedDirGraphStEphU128.rs"

[[test]]
name = "TestWeightedDirGraphStEphUsize"
path = "tests/Chap06/TestWeightedDirGraphStEphUsize.rs"

# [[test]]  # API changed: out_neighbors/in_neighbors renamed to n_plus/n_minus
# name = "TestLabDirGraphMtEph"
# path = "tests/Chap06/TestLabDirGraphMtEph.rs"

# [[test]]  # API changed: neighbors method removed
# name = "TestLabUnDirGraphMtEph"
# path = "tests/Chap06/TestLabUnDirGraphMtEph.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedDirGraphMtEphFloat"
# path = "tests/Chap06/TestWeighedDirGraphMtEphFloat.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedDirGraphMtEphInt"
# path = "tests/Chap06/TestWeighedDirGraphMtEphInt.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedDirGraphStEphFloat"
# path = "tests/Chap06/TestWeighedDirGraphStEphFloat.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedDirGraphStEphInt"
# path = "tests/Chap06/TestWeighedDirGraphStEphInt.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedUnDirGraphMtEphFloat"
# path = "tests/Chap06/TestWeighedUnDirGraphMtEphFloat.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedUnDirGraphMtEphInt"
# path = "tests/Chap06/TestWeighedUnDirGraphMtEphInt.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedUnDirGraphStEphFloat"
# path = "tests/Chap06/TestWeighedUnDirGraphStEphFloat.rs"

# [[test]]  # uses apas_ai crate, no source module exists
# name = "TestWeighedUnDirGraphStEphInt"
# path = "tests/Chap06/TestWeighedUnDirGraphStEphInt.rs"

[[test]]
name = "TestParaPairs"
path = "tests/Chap11/TestParaPairs.rs"

[[test]]
name = "TestFibonacciMt"
path = "tests/Chap11/TestFibonacciMt.rs"

[[test]]
name = "test_threads_plus"
path = "tests/Chap02/test_threads_plus.rs"

[[test]]
name = "test_fibonacci_scheduler"
path = "tests/Chap02/test_fibonacci_scheduler.rs"

[[test]]
name = "test_hf_scheduler"
path = "tests/Chap02/test_hf_scheduler.rs"

[[test]]
name = "test_exercise12_1"
path = "tests/Chap12/test_exercise12_1.rs"

[[test]]
name = "test_exercise12_2"
path = "tests/Chap12/test_exercise12_2.rs"

[[test]]
name = "test_exercise12_5"
path = "tests/Chap12/test_exercise12_5.rs"

[[test]]
name = "TestMathSeq"
path = "tests/Chap17/TestMathSeq.rs"

[[test]]
name = "TestArraySeq"
path = "tests/Chap18/TestArraySeq.rs"

[[test]]
name = "TestArraySeqMtPer"
path = "tests/Chap18/TestArraySeqMtPer.rs"

[[test]]
name = "TestArraySeqMtEph"
path = "tests/Chap18/TestArraySeqMtEph.rs"

[[test]]
name = "TestArraySeqStEph"
path = "tests/Chap18/TestArraySeqStEph.rs"

[[test]]
name = "TestArraySeqStPer"
path = "tests/Chap18/TestArraySeqStPer.rs"

[[test]]
name = "TestLinkedListStEph"
path = "tests/Chap18/TestLinkedListStEph.rs"

[[test]]
name = "TestLinkedListStPer"
path = "tests/Chap18/TestLinkedListStPer.rs"

[[test]]
name = "TestChap19ArraySeqStEph"
path = "tests/Chap19/TestArraySeqStEph.rs"

[[test]]
name = "TestChap19ArraySeqStPer"
path = "tests/Chap19/TestArraySeqStPer.rs"

[[test]]
name = "TestChap19ArraySeqMtEph"
path = "tests/Chap19/TestArraySeqMtEph.rs"

[[test]]
name = "TestChap21"
path = "tests/Chap21/TestChap21.rs"

[[test]]
name = "TestBalBinTreeStEph"
path = "tests/Chap23/TestBalBinTreeStEph.rs"

[[test]]
name = "TestPrimTreeSeqStPer"
path = "tests/Chap23/TestPrimTreeSeqStPer.rs"

[[test]]
name = "TestDivConReduceStPer"
path = "tests/Chap26/TestDivConReduceStPer.rs"

[[test]]
name = "TestMergeSortStPer"
path = "tests/Chap26/TestMergeSortStPer.rs"

[[test]]
name = "TestDivConReduceMtPer"
path = "tests/Chap26/TestDivConReduceMtPer.rs"

[[test]]
name = "TestMergeSortMtPer"
path = "tests/Chap26/TestMergeSortMtPer.rs"

[[test]]
name = "TestScanDCStPer"
path = "tests/Chap26/TestScanDCStPer.rs"

[[test]]
name = "TestScanDCMtPer"
path = "tests/Chap26/TestScanDCMtPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestETSPStEph"
# path = "tests/Chap26/TestETSPStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestETSPMtEph"
# path = "tests/Chap26/TestETSPMtEph.rs"

[[test]]
name = "TestReduceContractStEph"
path = "tests/Chap27/TestReduceContractStEph.rs"

[[test]]
name = "TestReduceContractMtEph"
path = "tests/Chap27/TestReduceContractMtEph.rs"

[[test]]
name = "TestScanContractStEph"
path = "tests/Chap27/TestScanContractStEph.rs"

[[test]]
name = "TestScanContractMtEph"
path = "tests/Chap27/TestScanContractMtEph.rs"

# Standards tests
[[test]]
name = "Testmod_standard"
path = "tests/standards/Testmod_standard.rs"

[[test]]
name = "Testview_standard"
path = "tests/standards/Testview_standard.rs"

[[test]]
name = "Testdeep_view_standard"
path = "tests/standards/Testdeep_view_standard.rs"

[[test]]
name = "Testiterators_standard"
path = "tests/standards/Testiterators_standard.rs"

[[test]]
name = "Testmut_standard"
path = "tests/standards/Testmut_standard.rs"

[[test]]
name = "Testmulti_struct_standard"
path = "tests/standards/Testmulti_struct_standard.rs"

[[test]]
name = "Testtable_of_contents_standard"
path = "tests/standards/Testtable_of_contents_standard.rs"

[[test]]
name = "Testusing_closures_standard"
path = "tests/standards/Testusing_closures_standard.rs"

[[test]]
name = "Testwrapping_iterators_standard"
path = "tests/standards/Testwrapping_iterators_standard.rs"

[[test]]
name = "Testtoplevel_coarse_rwlocks_for_mt_modules"
path = "tests/standards/Testtoplevel_coarse_rwlocks_for_mt_modules.rs"

[[test]]
name = "Testspec_naming_convention"
path = "tests/standards/Testspec_naming_convention.rs"

## Testrwlock_standard moved to attic
## Testarc_standard moved to attic

# Experiments removed - use verus-proof-time-testing project instead
# [[test]]
# name = "test_verify_harness"
# path = "tests/experiments/test_verify_harness.rs"

# [[test]]
# name = "TestVerusKeepGhostAndTest"
# path = "tests/experiments/TestVerusKeepGhostAndTest.rs"

# [[test]]
# name = "TestDeriveClone"
# path = "tests/experiments/TestDeriveClone.rs"

# [[test]]
# name = "TestDeriveCopy"
# path = "tests/experiments/TestDeriveCopy.rs"

# [[test]]
# name = "TestDeriveDebug"
# path = "tests/experiments/TestDeriveDebug.rs"

# [[test]]
# name = "TestDeriveDefault"
# path = "tests/experiments/TestDeriveDefault.rs"

# [[test]]
# name = "TestDeriveEq"
# path = "tests/experiments/TestDeriveEq.rs"

# [[test]]
# name = "TestDeriveHash"
# path = "tests/experiments/TestDeriveHash.rs"

# [[test]]
# name = "TestDerivePartialEq"
# path = "tests/experiments/TestDerivePartialEq.rs"

# [[test]]
# name = "TestDerivePartialOrd"
# path = "tests/experiments/TestDerivePartialOrd.rs"

# [[test]]
# name = "TestDeriveOrd"
# path = "tests/experiments/TestDeriveOrd.rs"

[[bench]]
name = "BenchInsertionSortStEph"
path = "benches/Chap03/BenchInsertionSortStEph.rs"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# rust_verify_test_macros requires nightly - use verus-proof-time-testing project instead
# rust_verify_test_macros = { path = "/home/milnes/projects/verus/source/rust_verify_test_macros" }
which = "6"

[profile.release]
incremental = true

[lints.rust]
non_snake_case = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
unused_parens = "allow"
non_shorthand_field_patterns = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)', 'cfg(verus_keep_ghost_body)'] }

[lints.clippy]
module_inception = "allow"
type_complexity = "allow"

[workspace]
members = ["."]

# Use local Verus fork for vstd and state machines (for rust-analyzer navigation)
[patch.crates-io]
vstd = { path = "/home/milnes/projects/verus/source/vstd" }
verus_state_machines_macros = { path = "/home/milnes/projects/verus/source/state_machines_macros" }
[[test]]
name = "TestMaxContigSubSumBruteStEph"
path = "tests/Chap28/TestMaxContigSubSumBruteStEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConMtEph"
path = "tests/Chap28/TestMaxContigSubSumDivConMtEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConOptMtEph"
path = "tests/Chap28/TestMaxContigSubSumDivConOptMtEph.rs"

[[test]]
name = "TestMaxContigSubSumIterStEph"
path = "tests/Chap28/TestMaxContigSubSumIterStEph.rs"

[[test]]
name = "TestMaxContigSubSumReducedMcsseStEph"
path = "tests/Chap28/TestMaxContigSubSumReducedMcsseStEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConOptStEph"
path = "tests/Chap28/TestMaxContigSubSumDivConOptStEph.rs"

[[test]]
name = "TestMaxContigSubSumDivConStEph"
path = "tests/Chap28/TestMaxContigSubSumDivConStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestMaxContigSubSumOptMtEph"
# path = "tests/Chap28/TestMaxContigSubSumOptMtEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestMaxContigSubSumOptStEph"
# path = "tests/Chap28/TestMaxContigSubSumOptStEph.rs"

[[test]]
name = "TestMaxContigSubSumReducedStEph"
path = "tests/Chap28/TestMaxContigSubSumReducedStEph.rs"

[[test]]
name = "TestOrderStatSelectMtEph"
path = "tests/Chap35/TestOrderStatSelectMtEph.rs"

[[test]]
name = "TestOrderStatSelectMtPer"
path = "tests/Chap35/TestOrderStatSelectMtPer.rs"

[[test]]
name = "TestOrderStatSelectStEph"
path = "tests/Chap35/TestOrderStatSelectStEph.rs"

[[test]]
name = "TestOrderStatSelectStPer"
path = "tests/Chap35/TestOrderStatSelectStPer.rs"

[[test]]
name = "TestQuickSortMtEph"
path = "tests/Chap36/TestQuickSortMtEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestQuickSortMtEphSlice"
# path = "tests/Chap36/TestQuickSortMtEphSlice.rs"

[[test]]
name = "TestQuickSortStEph"
path = "tests/Chap36/TestQuickSortStEph.rs"

[[test]]
name = "BenchQuickSort"
path = "tests/Chap36/BenchQuickSort.rs"

[[test]]
name = "TestAVLTreeSeqMtPer"
path = "tests/Chap37/TestAVLTreeSeqMtPer.rs"

[[test]]
name = "TestAVLTreeSeq"
path = "tests/Chap37/TestAVLTreeSeq.rs"

[[test]]
name = "TestAVLTreeSeqStEph18"
path = "tests/Chap37/TestAVLTreeSeqStEph18.rs"

[[test]]
name = "TestAVLTreeSeqStEphChap37"
path = "tests/Chap37/TestAVLTreeSeqStEphChap37.rs"

[[test]]
name = "TestAVLTreeSeqStEph"
path = "tests/Chap37/TestAVLTreeSeqStEph.rs"

[[test]]
name = "TestAVLTreeSeqStPer18"
path = "tests/Chap37/TestAVLTreeSeqStPer18.rs"

[[test]]
name = "TestAVLTreeSeqStPer19"
path = "tests/Chap37/TestAVLTreeSeqStPer19.rs"

[[test]]
name = "TestAVLTreeSeqStPer"
path = "tests/Chap37/TestAVLTreeSeqStPer.rs"

[[test]]
name = "TestBSTAVLMtEph"
path = "tests/Chap37/TestBSTAVLMtEph.rs"

[[test]]
name = "TestBSTAVLStEph"
path = "tests/Chap37/TestBSTAVLStEph.rs"

[[test]]
name = "TestBSTBBAlphaMtEph"
path = "tests/Chap37/TestBSTBBAlphaMtEph.rs"

[[test]]
name = "TestBSTBBAlphaStEph"
path = "tests/Chap37/TestBSTBBAlphaStEph.rs"

# [[test]]  # module BSTMtEph does not exist
# name = "TestBSTMtEph"
# path = "tests/Chap37/TestBSTMtEph.rs"

[[test]]
name = "TestBSTPlainMtEph"
path = "tests/Chap37/TestBSTPlainMtEph.rs"

[[test]]
name = "TestBSTPlainStEph"
path = "tests/Chap37/TestBSTPlainStEph.rs"

[[test]]
name = "TestBSTRBMtEph"
path = "tests/Chap37/TestBSTRBMtEph.rs"

[[test]]
name = "TestBSTRBStEph"
path = "tests/Chap37/TestBSTRBStEph.rs"

[[test]]
name = "TestBSTSetAVLMtEph"
path = "tests/Chap37/TestBSTSetAVLMtEph.rs"

[[test]]
name = "TestBSTSetBBAlphaMtEph"
path = "tests/Chap37/TestBSTSetBBAlphaMtEph.rs"

[[test]]
name = "TestBSTSetPlainMtEph"
path = "tests/Chap37/TestBSTSetPlainMtEph.rs"

[[test]]
name = "TestBSTSetRBMtEph"
path = "tests/Chap37/TestBSTSetRBMtEph.rs"

[[test]]
name = "TestBSTSetSplayMtEph"
path = "tests/Chap37/TestBSTSetSplayMtEph.rs"

[[test]]
name = "TestBSTSplayMtEph"
path = "tests/Chap37/TestBSTSplayMtEph.rs"

[[test]]
name = "TestBSTSplayStEph"
path = "tests/Chap37/TestBSTSplayStEph.rs"

[[test]]
name = "TestBSTParaMtEph"
path = "tests/Chap38/TestBSTParaMtEph.rs"

[[test]]
name = "TestBSTParaStEph"
path = "tests/Chap38/TestBSTParaStEph.rs"

[[test]]
name = "TestBSTParaTreapMtEph"
path = "tests/Chap39/TestBSTParaTreapMtEph.rs"

[[test]]
name = "TestBSTSetTreapMtEph"
path = "tests/Chap39/TestBSTSetTreapMtEph.rs"

[[test]]
name = "TestBSTTreapMtEph"
path = "tests/Chap39/TestBSTTreapMtEph.rs"

[[test]]
name = "TestBSTTreapStEph"
path = "tests/Chap39/TestBSTTreapStEph.rs"

[[test]]
name = "TestBSTKeyValueStEph"
path = "tests/Chap40/TestBSTKeyValueStEph.rs"

[[test]]
name = "TestBSTReducedStEph"
path = "tests/Chap40/TestBSTReducedStEph.rs"

[[test]]
name = "TestBSTSizeStEph"
path = "tests/Chap40/TestBSTSizeStEph.rs"

[[test]]
name = "TestArraySetEnumMtEph"
path = "tests/Chap41/TestArraySetEnumMtEph.rs"

[[test]]
name = "TestArraySetStEph"
path = "tests/Chap41/TestArraySetStEph.rs"

[[test]]
name = "TestAVLTreeSetMtEph"
path = "tests/Chap41/TestAVLTreeSetMtEph.rs"

[[test]]
name = "TestAVLTreeSetMtPer"
path = "tests/Chap41/TestAVLTreeSetMtPer.rs"

[[test]]
name = "TestAVLTreeSetStEph"
path = "tests/Chap41/TestAVLTreeSetStEph.rs"

[[test]]
name = "TestAVLTreeSetStPer"
path = "tests/Chap41/TestAVLTreeSetStPer.rs"

[[test]]
name = "TestExample41_3"
path = "tests/Chap41/TestExample41_3.rs"

[[test]]
name = "TestExample42_1"
path = "tests/Chap42/TestExample42_1.rs"

[[test]]
name = "TestTableMtEph"
path = "tests/Chap42/TestTableMtEph.rs"

[[test]]
name = "TestTableStEph"
path = "tests/Chap42/TestTableStEph.rs"

[[test]]
name = "TestTableStPer"
path = "tests/Chap42/TestTableStPer.rs"

[[test]]
name = "TestAugOrderedTableMtEph"
path = "tests/Chap43/TestAugOrderedTableMtEph.rs"

[[test]]
name = "TestAugOrderedTableStEph"
path = "tests/Chap43/TestAugOrderedTableStEph.rs"

[[test]]
name = "TestAugOrderedTableStPer"
path = "tests/Chap43/TestAugOrderedTableStPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestExample43_1"
# path = "tests/Chap43/TestExample43_1.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestOrderedSetMtEph"
# path = "tests/Chap43/TestOrderedSetMtEph.rs"

[[test]]
name = "TestOrderedSetStEph"
path = "tests/Chap43/TestOrderedSetStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestOrderedSetStPer"
# path = "tests/Chap43/TestOrderedSetStPer.rs"

[[test]]
name = "TestOrderedTableMtEph"
path = "tests/Chap43/TestOrderedTableMtEph.rs"

# [[test]]  # depends on OrderedSetMtEph (commented out)
# name = "TestOrderedTableMtPer"
# path = "tests/Chap43/TestOrderedTableMtPer.rs"

[[test]]
name = "TestOrderedTableStEph"
path = "tests/Chap43/TestOrderedTableStEph.rs"

[[test]]
name = "TestOrderedTableStPer"
path = "tests/Chap43/TestOrderedTableStPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestDocumentIndex"
# path = "tests/Chap44/TestDocumentIndex.rs"

# [[test]]  # depends on DocumentIndex (commented out)
# name = "TestExample44_1"
# path = "tests/Chap44/TestExample44_1.rs"

[[test]]
name = "TestBalancedTreePQ"
path = "tests/Chap45/TestBalancedTreePQ.rs"

[[test]]
name = "TestBinaryHeapPQ"
path = "tests/Chap45/TestBinaryHeapPQ.rs"

[[test]]
name = "TestExample45_2"
path = "tests/Chap45/TestExample45_2.rs"

[[test]]
name = "TestHeapsortExample"
path = "tests/Chap45/TestHeapsortExample.rs"

[[test]]
name = "TestLeftistHeapPQ"
path = "tests/Chap45/TestLeftistHeapPQ.rs"

[[test]]
name = "TestSortedListPQ"
path = "tests/Chap45/TestSortedListPQ.rs"

[[test]]
name = "TestUnsortedListPQ"
path = "tests/Chap45/TestUnsortedListPQ.rs"

[[test]]
name = "TestDoubleHashFlatHashTable"
path = "tests/Chap47/TestDoubleHashFlatHashTable.rs"

[[test]]
name = "TestLinkedListChainedHashTable"
path = "tests/Chap47/TestLinkedListChainedHashTable.rs"

[[test]]
name = "TestLinProbFlatHashTable"
path = "tests/Chap47/TestLinProbFlatHashTable.rs"

[[test]]
name = "TestParaHashTableStEph"
path = "tests/Chap47/TestParaHashTableStEph.rs"

[[test]]
name = "TestQuadProbFlatHashTable"
path = "tests/Chap47/TestQuadProbFlatHashTable.rs"

[[test]]
name = "TestStructChainedHashTable"
path = "tests/Chap47/TestStructChainedHashTable.rs"

[[test]]
name = "TestVecChainedHashTable"
path = "tests/Chap47/TestVecChainedHashTable.rs"

[[test]]
name = "TestMinEditDistMtEph"
path = "tests/Chap49/TestMinEditDistMtEph.rs"

[[test]]
name = "TestMinEditDistMtPer"
path = "tests/Chap49/TestMinEditDistMtPer.rs"

[[test]]
name = "TestMinEditDistStEph"
path = "tests/Chap49/TestMinEditDistStEph.rs"

[[test]]
name = "TestMinEditDistStPer"
path = "tests/Chap49/TestMinEditDistStPer.rs"

[[test]]
name = "TestSubsetSumMtEph"
path = "tests/Chap49/TestSubsetSumMtEph.rs"

[[test]]
name = "TestSubsetSumMtPer"
path = "tests/Chap49/TestSubsetSumMtPer.rs"

[[test]]
name = "TestSubsetSumStEph"
path = "tests/Chap49/TestSubsetSumStEph.rs"

[[test]]
name = "TestSubsetSumStPer"
path = "tests/Chap49/TestSubsetSumStPer.rs"

[[test]]
name = "TestMatrixChainMtEph"
path = "tests/Chap50/TestMatrixChainMtEph.rs"

[[test]]
name = "TestMatrixChainMtPer"
path = "tests/Chap50/TestMatrixChainMtPer.rs"

[[test]]
name = "TestMatrixChainStEph"
path = "tests/Chap50/TestMatrixChainStEph.rs"

[[test]]
name = "TestMatrixChainStPer"
path = "tests/Chap50/TestMatrixChainStPer.rs"

[[test]]
name = "TestOBSTMtEph"
path = "tests/Chap50/TestOBSTMtEph.rs"

[[test]]
name = "TestOBSTMtPer"
path = "tests/Chap50/TestOBSTMtPer.rs"

[[test]]
name = "TestOptBinSearchTreeStEph"
path = "tests/Chap50/TestOptBinSearchTreeStEph.rs"

[[test]]
name = "TestOptBinSearchTreeStPer"
path = "tests/Chap50/TestOptBinSearchTreeStPer.rs"

[[test]]
name = "TestProbability"
path = "tests/Chap50/TestProbability.rs"

[[test]]
name = "TestBottomUpDPMtEph"
path = "tests/Chap51/TestBottomUpDPMtEph.rs"

[[test]]
name = "TestBottomUpDPMtPer"
path = "tests/Chap51/TestBottomUpDPMtPer.rs"

[[test]]
name = "TestBottomUpDPStEph"
path = "tests/Chap51/TestBottomUpDPStEph.rs"

[[test]]
name = "TestBottomUpDPStPer"
path = "tests/Chap51/TestBottomUpDPStPer.rs"

[[test]]
name = "TestTopDownDPMtEph"
path = "tests/Chap51/TestTopDownDPMtEph.rs"

[[test]]
name = "TestTopDownDPMtPer"
path = "tests/Chap51/TestTopDownDPMtPer.rs"

[[test]]
name = "TestTopDownDPStEph"
path = "tests/Chap51/TestTopDownDPStEph.rs"

[[test]]
name = "TestTopDownDPStPer"
path = "tests/Chap51/TestTopDownDPStPer.rs"

[[test]]
name = "TestAdjMatrixGraphMtPer"
path = "tests/Chap52/TestAdjMatrixGraphMtPer.rs"

[[test]]
name = "TestAdjMatrixGraphStEph"
path = "tests/Chap52/TestAdjMatrixGraphStEph.rs"

[[test]]
name = "TestAdjMatrixGraphStPer"
path = "tests/Chap52/TestAdjMatrixGraphStPer.rs"

[[test]]
name = "TestAdjSeqGraphMtPer"
path = "tests/Chap52/TestAdjSeqGraphMtPer.rs"

[[test]]
name = "TestAdjSeqGraphStEph"
path = "tests/Chap52/TestAdjSeqGraphStEph.rs"

[[test]]
name = "TestAdjSeqGraphStPer"
path = "tests/Chap52/TestAdjSeqGraphStPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestAdjTableGraphMtPer"
# path = "tests/Chap52/TestAdjTableGraphMtPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestAdjTableGraphStEph"
# path = "tests/Chap52/TestAdjTableGraphStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestAdjTableGraphStPer"
# path = "tests/Chap52/TestAdjTableGraphStPer.rs"

[[test]]
name = "TestEdgeSetGraphMtEph"
path = "tests/Chap52/TestEdgeSetGraphMtEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestEdgeSetGraphMtPer"
# path = "tests/Chap52/TestEdgeSetGraphMtPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestEdgeSetGraphStEph"
# path = "tests/Chap52/TestEdgeSetGraphStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestEdgeSetGraphStPer"
# path = "tests/Chap52/TestEdgeSetGraphStPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestGraphSearchMtPer"
# path = "tests/Chap53/TestGraphSearchMtPer.rs"

[[test]]
name = "TestGraphSearchStEph"
path = "tests/Chap53/TestGraphSearchStEph.rs"

[[test]]
name = "TestGraphSearchStPer"
path = "tests/Chap53/TestGraphSearchStPer.rs"

[[test]]
name = "TestPQMinStEph"
path = "tests/Chap53/TestPQMinStEph.rs"

[[test]]
name = "TestPQMinStPer"
path = "tests/Chap53/TestPQMinStPer.rs"

[[test]]
name = "TestBFSMtEph"
path = "tests/Chap54/TestBFSMtEph.rs"

[[test]]
name = "TestBFSMtPer"
path = "tests/Chap54/TestBFSMtPer.rs"

[[test]]
name = "TestBFSStEph"
path = "tests/Chap54/TestBFSStEph.rs"

[[test]]
name = "TestBFSStPer"
path = "tests/Chap54/TestBFSStPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestCycleDetectStEph"
# path = "tests/Chap55/TestCycleDetectStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestCycleDetectStPer"
# path = "tests/Chap55/TestCycleDetectStPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestDFSStEph"
# path = "tests/Chap55/TestDFSStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestDFSStPer"
# path = "tests/Chap55/TestDFSStPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestSCCStEph"
# path = "tests/Chap55/TestSCCStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestSCCStPer"
# path = "tests/Chap55/TestSCCStPer.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestTopoSortStEph"
# path = "tests/Chap55/TestTopoSortStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestTopoSortStPer"
# path = "tests/Chap55/TestTopoSortStPer.rs"

# [[test]]  # references non-existent F64Dist type
# name = "TestAllPairsResultStEphF64"
# path = "tests/Chap56/TestAllPairsResultStEphF64.rs"

[[test]]
name = "TestAllPairsResultStEphI64"
path = "tests/Chap56/TestAllPairsResultStEphI64.rs"

# [[test]]  # references non-existent F64Dist type
# name = "TestAllPairsResultStPerF64"
# path = "tests/Chap56/TestAllPairsResultStPerF64.rs"

[[test]]
name = "TestAllPairsResultStPerI64"
path = "tests/Chap56/TestAllPairsResultStPerI64.rs"

# [[test]]  # module commented out in lib.rs (uses ordered_float)
# name = "TestExample56_1"
# path = "tests/Chap56/TestExample56_1.rs"

# [[test]]  # module commented out in lib.rs (uses ordered_float)
# name = "TestExample56_3"
# path = "tests/Chap56/TestExample56_3.rs"

[[test]]
name = "TestPathWeightUtilsStEph"
path = "tests/Chap56/TestPathWeightUtilsStEph.rs"

[[test]]
name = "TestPathWeightUtilsStPer"
path = "tests/Chap56/TestPathWeightUtilsStPer.rs"

# [[test]]  # references non-existent F64Dist type
# name = "TestSSSPResultStEphF64"
# path = "tests/Chap56/TestSSSPResultStEphF64.rs"

[[test]]
name = "TestSSSPResultStEphI64"
path = "tests/Chap56/TestSSSPResultStEphI64.rs"

# [[test]]  # references non-existent F64Dist type
# name = "TestSSSPResultStPerF64"
# path = "tests/Chap56/TestSSSPResultStPerF64.rs"

[[test]]
name = "TestSSSPResultStPerI64"
path = "tests/Chap56/TestSSSPResultStPerI64.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestDijkstraStEphF64"
# path = "tests/Chap57/TestDijkstraStEphF64.rs"

[[test]]
name = "TestDijkstraStEphU64"
path = "tests/Chap57/TestDijkstraStEphU64.rs"

[[test]]
name = "TestStackStEph"
path = "tests/Chap57/TestStackStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestBellmanFordStEphF64"
# path = "tests/Chap58/TestBellmanFordStEphF64.rs"

[[test]]
name = "TestBellmanFordStEphI64"
path = "tests/Chap58/TestBellmanFordStEphI64.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestJohnsonMtEphF64"
# path = "tests/Chap59/TestJohnsonMtEphF64.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestJohnsonMtEphI64"
# path = "tests/Chap59/TestJohnsonMtEphI64.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestJohnsonStEphF64"
# path = "tests/Chap59/TestJohnsonStEphF64.rs"

[[test]]
name = "TestJohnsonStEphI64"
path = "tests/Chap59/TestJohnsonStEphI64.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestEdgeContractionMtEph"
# path = "tests/Chap61/TestEdgeContractionMtEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestEdgeContractionStEph"
# path = "tests/Chap61/TestEdgeContractionStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestVertexMatchingMtEph"
# path = "tests/Chap61/TestVertexMatchingMtEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestVertexMatchingStEph"
# path = "tests/Chap61/TestVertexMatchingStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestStarContractionMtEph"
# path = "tests/Chap62/TestStarContractionMtEph.rs"

[[test]]
name = "TestStarContractionStEph"
path = "tests/Chap62/TestStarContractionStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestStarPartitionMtEph"
# path = "tests/Chap62/TestStarPartitionMtEph.rs"

[[test]]
name = "TestStarPartitionStEph"
path = "tests/Chap62/TestStarPartitionStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestConnectivityMtEph"
# path = "tests/Chap63/TestConnectivityMtEph.rs"

[[test]]
name = "TestConnectivityStEph"
path = "tests/Chap63/TestConnectivityStEph.rs"

# [[test]]  # module commented out in lib.rs
# name = "TestSpanTreeMtEph"
# path = "tests/Chap64/TestSpanTreeMtEph.rs"

[[test]]
name = "TestSpanTreeStEph"
path = "tests/Chap64/TestSpanTreeStEph.rs"

# [[test]]  # uses ordered_float (removed crate)
# name = "TestTSPApproxStEph"
# path = "tests/Chap64/TestTSPApproxStEph.rs"

# [[test]]  # uses ordered_float (removed crate)
# name = "TestKruskalStEph"
# path = "tests/Chap65/TestKruskalStEph.rs"

# [[test]]  # uses ordered_float (removed crate)
# name = "TestPrimStEph"
# path = "tests/Chap65/TestPrimStEph.rs"

[[test]]
name = "TestUnionFindStEph"
path = "tests/Chap65/TestUnionFindStEph.rs"

# [[test]]  # uses ordered_float (removed crate)
# name = "TestBoruvkaMtEph"
# path = "tests/Chap66/TestBoruvkaMtEph.rs"

# [[test]]  # uses ordered_float (removed crate)
# name = "TestBoruvkaStEph"
# path = "tests/Chap66/TestBoruvkaStEph.rs"

